--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/bread.html">Basic Rustic Loaf</a>
+        <ul>
+            <li><a href="./recipes/bread.html">Basic Rustic Loaf</a></li>
+            <li><a href="./recipes/custard.html">Custard</a></li>
+            <li><a href="./recipes/pineapple-buns.html">Pineapple Buns</a></li>
+
+        </ul>
+        
     </body>
 </html>
