resized pineapple buns image

--- a/recipes/pineapple-buns.html
+++ b/recipes/pineapple-buns.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Basic Rustic Loaf</h1>
-        <img src="../images/pbuns.jpg" alt="pineapplebuns.jpg">
+        <img src="../images/pbuns.jpg" alt="pineapplebuns.jpg" width="300px" height="auto">
         <h3>Easy to make at home Basic Rustic Loaf!</h4>
         <h5>Ingredients</h5>
         <ul>
